--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
-    <div class="d-flex flex-column align-items-center align-items-md-start">
+    <div class="info d-flex flex-column align-items-center align-items-md-start">
       <h1>
         <span>House of</span><br><span>Gambling</span>
       </h1>
       <p>Raise your ROI with direct advertiser</p>
       <button class="cta-btn">Become a partner</button>
     </div>
-    <div id="blog" data-simplebar data-simplebar-auto-hide="false" simplebar-click-on-track="false">
+<!--    <div class="animation-bg d-flex flex-column mx-auto">-->
+<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
+<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
+<!--      <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
+<!--    </div>-->
+    <div id="blog" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
       <div class="card tinted">
         <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
         <small class="mt-4">10.02.2023</small>
@@ -148,47 +153,32 @@
 </section>
 
 <section id="brands">
+  <h2 class="text-center mb-5">Our brands</h2>
   <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
-  <div class="container">
-    <h2 class="text-center mb-5">Our brands</h2>
-    <div class="splide" aria-label="...">
+  <div class="container thick-bordered p-3">
+    <ul id="thumbnails" class="thumbnails mb-4">
+      <li class="thumbnail">
+        <img src="assets/icons/brands/megaslot.svg" alt="">
+      </li>
+      <li class="thumbnail">
+        <img src="assets/icons/brands/ms-io.svg" alt="">
+      </li>
+      <li class="thumbnail">
+        <img src="assets/icons/brands/unislots.svg" alt="">
+      </li>
+    </ul>
+
+    <div class="splide">
       <div class="splide__track">
         <ul class="splide__list">
-          <li class="splide__slide">
-            <div class="thick-bordered p-3">
-              <ul class="group d-flex justify-content-center mb-3">
-                <li><object type="image/svg+xml" data="assets/icons/brands/megaslot.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/ms-io.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/unislots.svg"></object></li>
-              </ul>
-              <div class="d-flex justify-content-between align-items-center card px-4 py-2">
-                <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
-              </div>
-            </div>
+          <li class="splide__slide card px-4 py-2">
+            <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
           </li>
-          <li class="splide__slide">
-            <div class="thick-bordered p-3">
-              <ul class="group d-flex justify-content-center mb-3">
-                <li><object type="image/svg+xml" data="assets/icons/brands/megaslot.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/ms-io.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/unislots.svg"></object></li>
-              </ul>
-              <div class="d-flex justify-content-between align-items-center card px-4 py-2">
-                <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
-              </div>
-            </div>
+          <li class="splide__slide card px-4 py-2">
+            <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
           </li>
-          <li class="splide__slide">
-            <div class="thick-bordered p-3">
-              <ul class="group d-flex justify-content-center mb-3">
-                <li><object type="image/svg+xml" data="assets/icons/brands/megaslot.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/ms-io.svg"></object></li>
-                <li><object type="image/svg+xml" data="assets/icons/brands/unislots.svg"></object></li>
-              </ul>
-              <div class="d-flex justify-content-between align-items-center card px-4 py-2">
-                <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
-              </div>
-            </div>
+          <li class="splide__slide card px-4 py-2">
+            <object style="width: 100%" type="image/svg+xml" data="assets/icons/brands/total.svg"></object>
           </li>
         </ul>
       </div>
