--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   <div class="container d-flex flex-column align-items-center">
     <h2>About us</h2>
     <p class="text-center">We are a direct advertiser and an online gambling affiliate program. MEGAPARTNERS guarantees the stability and reliability of all processes for our affiliates and players.</p>
-    <div class="d-flex flex-column flex-md-row align-items-center">
-      <div class="d-none d-md-block me-3 svg">
+    <div class="inner d-flex flex-column flex-md-row align-items-center">
+      <div class="coin d-none d-md-block svg">
         <object type="image/svg+xml" data="assets/icons/coins/megapartners.svg"></object>
       </div>
       <div class="about_cards d-flex flex-column justify-content-between">
