fix home layout

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 </section>
 
 <section id="about">
-  <div class="container d-flex flex-column align-items-center">
-    <h2>About us</h2>
+  <div class="container d-flex flex-column align-items-md-center">
+    <h2 class="text-center">About us</h2>
     <p class="text-center">We are a direct advertiser and an online gambling affiliate program. MEGAPARTNERS guarantees the stability and reliability of all processes for our affiliates and players.</p>
     <div class="inner d-flex flex-column flex-md-row align-items-center">
       <div class="coin d-none d-md-block svg">
@@ -252,8 +252,8 @@
     <h2 class="text-center mb-5">Events</h2>
     <div class="splide" aria-label="...">
       <div class="splide__track">
-        <ul class="splide__list">
-          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+        <ul class="splide__list d-flex flex-column flex-md-row">
+          <li class="mb-4 mb-md-0 splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
             <div class="inner d-flex flex-column justify-content-start align-items-center">
               <h4>ICE LONDON UK</h4>
               <div class="place">Global Gaming HUB</div>
@@ -265,7 +265,7 @@
             </div>
             <button class="cta-btn mt-4">Book a meeting</button>
           </li>
-          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+          <li class="mb-4 mb-md-0 splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
             <div class="inner d-flex flex-column justify-content-start align-items-center">
               <h4>ICE LONDON UK</h4>
               <div class="place">Global Gaming HUB</div>
@@ -277,7 +277,7 @@
             </div>
             <button class="cta-btn mt-4">Book a meeting</button>
           </li>
-          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+          <li class="mb-4 mb-md-0 splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
             <div class="inner d-flex flex-column justify-content-start align-items-center">
               <h4>ICE LONDON UK</h4>
               <div class="place">Global Gaming HUB</div>
@@ -289,7 +289,7 @@
             </div>
             <button class="cta-btn mt-4">Book a meeting</button>
           </li>
-          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+          <li class="mb-4 mb-md-0 splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
             <div class="inner d-flex flex-column justify-content-start align-items-center">
               <h4>ICE LONDON UK</h4>
               <div class="place">Global Gaming HUB</div>
@@ -304,7 +304,7 @@
         </ul>
       </div>
 
-      <div class="my-carousel-progress mt-4">
+      <div class="my-carousel-progress mt-4 d-none d-md-block">
         <div class="my-carousel-progress-bar"></div>
       </div>
     </div>
@@ -316,12 +316,12 @@
     <h2 class="text-center">Subscribe to our newsletter</h2>
     <p class="text-center">We'll send to you our special offers and  industry newsbreaks.</p>
     <div class="container">
-      <form class="d-flex justify-content-between">
+      <form class="d-flex flex-column flex-md-row justify-content-between">
         <div class="input">
           <input placeholder="Your email..." type="email">
           <span>Email:</span>
         </div>
-        <button class="cta-btn ms-3">Subscribe</button>
+        <button class="cta-btn ms-0 ms-md-3 mt-4 mt-md-0">Subscribe</button>
       </form>
     </div>
   </div>
