--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
-    <div class="info d-flex flex-column align-items-center align-items-md-start">
+    <div class="info mb-4 mb-md-0 d-flex flex-column align-items-center align-items-md-start">
       <h1>
         <span>House of</span><br><span>Gambling</span>
       </h1>
@@ -192,8 +192,8 @@
   <div class="container">
     <h2 class="text-center">Commissions</h2>
     <p class="text-center">We have calculated and selected different types of commissions so that you can always choose the most profitable option for yourself.</p>
-    <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
-      <ul class="d-flex flex-column flex-grow-1">
+    <div class="content d-flex flex-column flex-md-row align-items-md-center justify-content-md-between">
+      <ul class="d-flex flex-column">
         <li class="card bg-transparent thick-bordered d-flex flex-column align-items-center">
           <h4>CPA</h4>
           <h3>UP TO 500 EUR</h3>
@@ -214,34 +214,37 @@
           </small>
         </li>
       </ul>
-      <div class="ms-3 d-flex flex-column card thick-bordered tinted without-hover flex-grow-1">
+      <div class="d-flex flex-column card thick-bordered tinted">
         <div class="d-flex flex-column">
-          <small class="d-block">I WANT TO EARN MONTHLY</small>
+          <header class="d-block">I WANT TO EARN MONTHLY</header>
           <div class="my-3">
-            <div class="d-flex justify-content-between">
-              <div class="d-flex flex-column align-items-start">
-                <div class="filtered-content">
+            <div class="d-flex flex-column justify-content-between">
+              <div class="d-flex flex-column-reverse flex-md-row justify-content-md-between align-items-md-center">
+                <div class="filtered-content d-flex justify-content-center d-md-block">
                   <h3 class="filter-marker" data-marker="eur">€50.000 +</h3>
                   <h3 class="filter-marker" data-marker="btc">1.5 BTC +</h3>
                   <h3 class="filter-marker" data-marker="usd">$35.000 +</h3>
                 </div>
-
-                <small class="d-block mt-3">Casino Profit Required</small>
-                <small class="d-block">Commission plan</small>
-              </div>
-              <div class="d-flex flex-column align-items-end">
-                <ul id="filters-group" class="filters d-flex bordered align-items-center p-2">
+                <ul id="filters-group" class="filters d-flex bordered justify-content-between align-items-center p-2">
                   <li><button data-filter="eur" class="btn active">EUR</button></li>
                   <li class="mx-2"><button data-filter="btc" class="btn">BTC</button></li>
                   <li><button data-filter="usd" class="btn">USD</button></li>
                 </ul>
-                <small class="d-block mt-3">Casino Profit Required</small>
-                <small class="d-block">25%</small>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-column align-items-start">
+                  <small class="d-block mt-3">Casino Profit Required</small>
+                  <small class="d-block">Commission plan</small>
+                </div>
+                <div class="d-flex flex-column align-items-end">
+                  <small class="d-block mt-3">Casino Profit Required</small>
+                  <small class="d-block">25%</small>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="cta-btn">Start earning</div>
+        <div class="cta-btn mt-4">Start earning</div>
       </div>
     </div>
   </div>
@@ -257,7 +260,7 @@
             <div class="inner d-flex flex-column justify-content-start align-items-center">
               <h4>ICE LONDON UK</h4>
               <div class="place">Global Gaming HUB</div>
-              <h3 class="mt-2">7-9 February</h3>
+              <h3 class="mt-md-2">7-9 February</h3>
               <div class="d-flex align-items-center justify-content-center">
                 <object type="image/svg+xml" data="assets/icons/location.svg"></object>
                 <small class="ms-2">London</small>
