--- a/brand-guide.html
+++ b/brand-guide.html
@@ -53,9 +53,9 @@
           </span>
 
           <ul class="dropdown-list">
-            <li>EN</li>
             <li>FRA</li>
             <li>RU</li>
+            <li>EN</li>
           </ul>
         </div>
         <button class="btn d-none d-md-block">LOG IN</button>
@@ -333,7 +333,105 @@
       </div>
       <div class="accordion__content">
         <span class="d-block mt-4 mb-5">The color palette is a brand identifier:</span>
-        </div>
+        <ul class="mt-4 color-palette">
+          <li class="mt-3 secondary">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>RGB</div>
+              <div class="color-value">R255G204B41</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>WEB</div>
+              <div class="color-value">FFCC29</div>
+            </div>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>CMYK</div>
+              <div class="color-value">C0M20Y100K0</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>Pantone</div>
+              <div class="color-value">116C</div>
+            </div>
+          </li>
+          <li class="mt-3 tint">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>RGB</div>
+              <div class="color-value">R255G204B41</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>WEB</div>
+              <div class="color-value">FFCC29</div>
+            </div>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>CMYK</div>
+              <div class="color-value">C0M20Y100K0</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>Pantone</div>
+              <div class="color-value">116C</div>
+            </div>
+          </li>
+          <li class="mt-3 mint">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>RGB</div>
+              <div class="color-value">R255G204B41</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>WEB</div>
+              <div class="color-value">FFCC29</div>
+            </div>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>CMYK</div>
+              <div class="color-value">C0M20Y100K0</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>Pantone</div>
+              <div class="color-value">116C</div>
+            </div>
+          </li>
+          <li class="mt-3 purple">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>RGB</div>
+              <div class="color-value">R255G204B41</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>WEB</div>
+              <div class="color-value">FFCC29</div>
+            </div>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>CMYK</div>
+              <div class="color-value">C0M20Y100K0</div>
+            </div>
+            <svg width="3" height="64" viewBox="0 0 3 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.25 64V0" stroke="white" stroke-opacity="0.2" stroke-width="2"/>
+            </svg>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+              <div>Pantone</div>
+              <div class="color-value">116C</div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </li>
     <li class="accordion-container bordered flex-column">
       <div class="accordion-container__header d-flex justify-content-between align-items-center">
@@ -363,6 +461,19 @@
       </div>
       <div class="accordion__content">
         <span class="d-block mt-4 mb-5">Game icons: Dollar, timer, shield, crown, as well as the “M” icon from the MEGAPARTNERS logo are used as additional identification elements.</span>
+        <div class="d-flex flex-column align-items-center coins mt-4">
+          <ul class="d-flex justify-content-between w-100">
+            <li><object data="assets/icons/coins/ball.svg" type="image/svg+xml"></object></li>
+            <li><object data="assets/icons/coins/globe.svg" type="image/svg+xml"></object></li>
+            <li><object data="assets/icons/coins/dollar.svg" type="image/svg+xml"></object></li>
+            <li><object data="assets/icons/coins/dollar.svg" type="image/svg+xml"></object></li>
+          </ul>
+          <ul class="d-flex justify-content-around" style="width: 85%">
+            <li><object data="assets/icons/coins/clock.svg" type="image/svg+xml"></object></li>
+            <li><object data="assets/icons/coins/mp.svg" type="image/svg+xml"></object></li>
+            <li><object data="assets/icons/coins/shield.svg" type="image/svg+xml"></object></li>
+          </ul>
+        </div>
       </div>
     </li>
   </div>
