--- a/brand-guide.html
+++ b/brand-guide.html
@@ -490,9 +490,9 @@
     </div>
     <nav class="mt-4">
       <ul class="group d-flex flex-column flex-md-row">
-        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="terms.html">Terms & Conditions</a></li>
         <li><a href="#">Cookies</a></li>
-        <li><a href="contact.html">Contacts</a></li>
+        <li><a href="#">Contacts</a></li>
         <li><a href="careers.html">Careers</a></li>
         <li><a href="brand-guide.html">Brand Guide</a></li>
       </ul>
@@ -603,7 +603,7 @@
   </div>
   <div class="container text-center">
     <hr class="mt-3 mb-1">
-    <span>Copyright © 2023 Megapartners.io</span>
+    <span class="d-block mt-3">Copyright © 2023 Megapartners.io</span>
   </div>
 </footer>
 
