--- a/terms.html
+++ b/terms.html
@@ -202,6 +202,9 @@
           <span>6.10</span> As of June 21st, 2022, you will be subjected to the withdrawal fees depending on your payment system:Bank Transfer - 100 EUR, min cashout 1000 EURMin cashout 100 EUR:BTC - FreeUSDT - FreeWMZ - 3%PayPal - 3%Skrill - 3%Neteller - 3%Capitalist - Free
           <br>
           <span>6.11</span> Changes of payment method. In case of any changes made by you in your payment method in your account so as to receive a particular payout, such changes (e.g. payment details, banks, wallet) shall be made not later than the 5th day of the month, following the month of calculation. If such changes would be made later than the 5th day of the month, the payout would be based on the previous details/bank/wallet. For reasons, when no payout details were provided, the particular payout would be transferred for the next month till payout details would not be provided.
+          <br>
+          <span>6.12.</span> The CPA commission allows earning the fixed price for all the invited players
+          The terms of payment and the fixed price for a single player are determined individually for each Partner. Fraud, spam and incent traffic are forbidden. Test limit 20 FD anything over the limit without agreement will not be paid. In case of fraud, Affiliate Program stops CPA immediately and blocks Partner's balance due to this cause for an unlimited period after detection of the fraudulent activity. Unapproved traffic sources and launches will not be paid by CPA and will be transferred to RevShare. Also If more than 45-50% of players don't make repeated deposits or if 30% or more FD is the minimum deposit, the affiliate program has the right to freeze the payment to the affiliate or transfer the traffic to RevShare. Minimum CPA payment possible from 5 FD.
         </li>
         <li>
           <h2>7. Standard commission structures</h2>
