--- a/brand-guide.html
+++ b/brand-guide.html
@@ -107,7 +107,16 @@
   </div>
 </section>
 
+<section id="mobile-bg" class="d-md-none p-0">
+  <object class="bg light" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_light.svg"></object>
+  <object class="bg circle" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_dot.svg"></object>
+  <object class="bg coins-mobile" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_bg_mobile.svg"></object>
+</section>
+
 <section id="guide" class="d-md-block d-none">
+  <object class="bg light d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_light.svg"></object>
+  <object class="bg coins d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_left_bottom.svg"></object>
+  <object class="bg circle d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_dot.svg"></object>
   <div class="container d-flex">
     <nav>
         <ol>
