--- a/news.html
+++ b/news.html
@@ -82,6 +82,9 @@
       <li>
         <button class="btn" data-filter="interview">Interview</button>
       </li>
+      <li>
+        <button class="btn" data-filter="partnership">Partnership</button>
+      </li>
     </ul>
     <div class="splide d-md-none bordered" aria-label="...">
       <div class="shadow"></div>
