--- a/news.html
+++ b/news.html
@@ -85,6 +85,9 @@
       <li>
         <button class="btn" data-filter="partnership">Partnership</button>
       </li>
+      <li>
+        <button class="btn" data-filter="press-release">Press Release</button>
+      </li>
     </ul>
     <div class="splide d-md-none bordered" aria-label="...">
       <div class="shadow"></div>
@@ -101,6 +104,9 @@
           </li>
           <li class="splide__slide">
             <button class="btn" data-filter="partnership">Partnership</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="press-release">Press Release</button>
           </li>
         </ul>
       </div>
@@ -140,6 +146,32 @@
           <div class="news-tag d-flex align-items-center" data-marker="partnership">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
             <span class="ms-2">Partnership</span>
+          </div>
+          <h5 class="my-3 publication-date">20.02.2023</h5>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
+        </div>
+      </li>
+      <li class="news-content d-flex flex-column flex-md-row mb-4 thick-bordered p-4">
+        <div class="d-flex align-items-center">
+          <img src="assets/backgrounds/fallback_news_image.svg" alt="alt for news">
+        </div>
+        <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
+          <div class="news-tag d-flex align-items-center" data-marker="partnership">
+            <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
+            <span class="ms-2">Partnership</span>
+          </div>
+          <h5 class="my-3 publication-date">20.02.2023</h5>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
+        </div>
+      </li>
+      <li class="news-content d-flex flex-column flex-md-row mb-4 thick-bordered p-4">
+        <div class="d-flex align-items-center">
+          <img src="assets/backgrounds/fallback_news_image.svg" alt="alt for news">
+        </div>
+        <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
+          <div class="news-tag d-flex align-items-center" data-marker="press-release">
+            <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
+            <span class="ms-2">Press release</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
