--- a/news.html
+++ b/news.html
@@ -119,7 +119,7 @@
         <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
           <div class="news-tag d-flex align-items-center" data-marker="event">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
-            <span class="ms-2">Event</span>
+            <span>Event</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
@@ -132,7 +132,7 @@
         <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
           <div class="news-tag d-flex align-items-center" data-marker="interview">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
-            <span class="ms-2">Interview</span>
+            <span>Interview</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
@@ -145,7 +145,7 @@
         <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
           <div class="news-tag d-flex align-items-center" data-marker="partnership">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
-            <span class="ms-2">Partnership</span>
+            <span>Partnership</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
@@ -158,7 +158,7 @@
         <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
           <div class="news-tag d-flex align-items-center" data-marker="partnership">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
-            <span class="ms-2">Partnership</span>
+            <span>Partnership</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
@@ -171,7 +171,7 @@
         <div class="info d-flex flex-wrap flex-row flex-md-column justify-content-between justify-content-md-center align-items-center align-items-md-start">
           <div class="news-tag d-flex align-items-center" data-marker="press-release">
             <object type="image/svg+xml" data="assets/icons/price_tag.svg"></object>
-            <span class="ms-2">Press release</span>
+            <span>Press release</span>
           </div>
           <h5 class="my-3 publication-date">20.02.2023</h5>
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio</h4>
