--- a/brand-guide.html
+++ b/brand-guide.html
@@ -489,26 +489,24 @@
 </section>
 
 <footer id="footer" class="thick-bordered">
-  <div class="container d-flex flex-column flex-md-row justify-content-between align-items-md-end">
-    <div>
+  <div class="container d-flex flex-column flex-md-row justify-content-center align-items-md-end">
+    <div class="d-flex flex-column justify-content-start">
       <object class="mb-2" type="image/svg+xml" data="assets/icons/logo.svg"></object>
       <div class="d-flex align-items-center">
         <object class="me-4" type="image/svg+xml" data="assets/icons/partners/malta.svg"></object>
         <object type="image/svg+xml" data="assets/icons/partners/curacao.svg"></object>
       </div>
     </div>
-    <nav class="mt-4">
+    <nav class="mt-4 d-flex justify-content-md-center">
       <ul class="group d-flex flex-column flex-md-row">
         <li><a href="terms.html">Terms & Conditions</a></li>
-        <li><a href="#">Cookies</a></li>
-        <li><a href="#">Contacts</a></li>
         <li><a href="careers.html">Careers</a></li>
         <li><a href="brand-guide.html">Brand Guide</a></li>
       </ul>
     </nav>
-    <div>
+    <div class="d-flex flex-column justify-content-end">
       <header class="d-block mb-3">Our social media:</header>
-      <ul class="social-media group d-flex flex-wrap justify-content-between">
+      <ul class="social-media group d-flex flex-wrap justify-content-md-end justify-content-between">
         <li>
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_616_642)">
