--- a/news[id].html
+++ b/news[id].html
@@ -68,6 +68,7 @@
 </aside>
 
 <section id="news_content" class="mb-5">
+  <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/single_post_left_circle.svg"></object>
   <div class="container d-flex">
     <div class="content d-flex flex-column">
       <h2>MEGAPARTNERS COLLABORATES WITH POP ARTIST THUMBS FOR ICE LONDON</h2>
@@ -75,10 +76,10 @@
         <small>Dark/Light Theme</small>
         <div class="theme-toggle mt-2">
           <div class="theme-toggle_background"></div>
-          <svg class="moon ms-3" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="moon" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M7.52042 0.500027C8.0305 0.501387 8.10551 1.22445 7.68387 1.51151C6.13656 2.56495 5.12044 4.34064 5.12044 6.35366C5.12044 9.58655 7.74122 12.2073 10.9741 12.2073C11.5525 12.2073 12.1113 12.1234 12.639 11.9672C13.1282 11.8223 13.6404 12.3375 13.3182 12.7331C11.943 14.4216 9.84742 15.5 7.5 15.5C3.35786 15.5 0 12.1421 0 8C0 3.85786 3.35786 0.5 7.5 0.5C7.50681 0.5 7.51362 0.500009 7.52042 0.500027Z" fill="#478BF9"/>
           </svg>
-          <svg class="sun me-3" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="sun" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M3.89232 3.11707L2.72083 1.89104L1.80316 2.85679L2.96814 4.08282L3.89232 3.11707ZM2.09603 6.99378H0.143555V8.36364H2.09603V6.99378ZM7.95347 0.178711H6.65182V2.19926H7.95347V0.178711ZM12.8021 2.85679L11.8845 1.89104L10.7195 3.11707L11.6371 4.08282L12.8021 2.85679ZM10.713 12.2404L11.878 13.4732L12.7956 12.5075L11.6241 11.2815L10.713 12.2404ZM12.5093 6.99378V8.36364H14.4617V6.99378H12.5093ZM7.30265 3.56912C5.14841 3.56912 3.39769 5.41159 3.39769 7.67871C3.39769 9.94583 5.14841 11.7883 7.30265 11.7883C9.45688 11.7883 11.2076 9.94583 11.2076 7.67871C11.2076 5.41159 9.45688 3.56912 7.30265 3.56912ZM6.65182 15.1787H7.95347V13.1582H6.65182V15.1787ZM1.80316 12.5006L2.72083 13.4664L3.88581 12.2335L2.96814 11.2678L1.80316 12.5006Z" fill="white"/>
           </svg>
         </div>
@@ -167,10 +168,10 @@
         <small>Dark/Light Theme</small>
         <div class="theme-toggle mt-2">
           <div class="theme-toggle_background"></div>
-          <svg class="moon ms-3" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="moon" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M7.52042 0.500027C8.0305 0.501387 8.10551 1.22445 7.68387 1.51151C6.13656 2.56495 5.12044 4.34064 5.12044 6.35366C5.12044 9.58655 7.74122 12.2073 10.9741 12.2073C11.5525 12.2073 12.1113 12.1234 12.639 11.9672C13.1282 11.8223 13.6404 12.3375 13.3182 12.7331C11.943 14.4216 9.84742 15.5 7.5 15.5C3.35786 15.5 0 12.1421 0 8C0 3.85786 3.35786 0.5 7.5 0.5C7.50681 0.5 7.51362 0.500009 7.52042 0.500027Z" fill="#478BF9"/>
           </svg>
-          <svg class="sun me-3" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="sun" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M3.89232 3.11707L2.72083 1.89104L1.80316 2.85679L2.96814 4.08282L3.89232 3.11707ZM2.09603 6.99378H0.143555V8.36364H2.09603V6.99378ZM7.95347 0.178711H6.65182V2.19926H7.95347V0.178711ZM12.8021 2.85679L11.8845 1.89104L10.7195 3.11707L11.6371 4.08282L12.8021 2.85679ZM10.713 12.2404L11.878 13.4732L12.7956 12.5075L11.6241 11.2815L10.713 12.2404ZM12.5093 6.99378V8.36364H14.4617V6.99378H12.5093ZM7.30265 3.56912C5.14841 3.56912 3.39769 5.41159 3.39769 7.67871C3.39769 9.94583 5.14841 11.7883 7.30265 11.7883C9.45688 11.7883 11.2076 9.94583 11.2076 7.67871C11.2076 5.41159 9.45688 3.56912 7.30265 3.56912ZM6.65182 15.1787H7.95347V13.1582H6.65182V15.1787ZM1.80316 12.5006L2.72083 13.4664L3.88581 12.2335L2.96814 11.2678L1.80316 12.5006Z" fill="white"/>
           </svg>
         </div>
@@ -226,9 +227,13 @@
 </section>
 
 <section id="other_news">
+  <object class="bg pattern-light d-block d-md-none" type="image/svg+xml" data="assets/backgrounds/single_news_mobile_bottom_bg.svg"></object>
+  <object class="bg light d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/single_news_title_light.svg"></object>
+  <object class="bg pattern-mobile d-block d-md-none" type="image/svg+xml" data="assets/backgrounds/single_post_mobile_bottom.svg"></object>
+  <object class="bg pattern d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/single_post_bottom.svg"></object>
   <div class="container d-flex flex-column align-items-center">
-    <h2>Other News</h2>
-    <section class="splide mt-4">
+    <h2 class="mb-5 mb-md-0">Other News</h2>
+    <section class="splide mt-4 pt-5 pt-md-0">
       <div class="splide__track">
         <ul class="splide__list flex-column flex-md-row">
           <li class="splide__slide mb-3 mb-md-0 p-4 thick-bordered d-flex flex-column justify-content-end" style="background-image: url('assets/backgrounds/fallback_news_image.svg')">
@@ -275,11 +280,11 @@
         </svg>
       </div>
     </section>
-    <button class="cta-btn mt-5">See all news</button>
+    <a href="news.html" target="_blank" class="cta-btn mt-5">See all news</a>
   </div>
 </section>
 
-<footer class="thick-bordered">
+<footer id="footer" class="thick-bordered">
   <div class="container d-flex flex-column flex-md-row justify-content-between align-items-md-end">
     <div>
       <object class="mb-2" type="image/svg+xml" data="assets/icons/logo.svg"></object>
