terms fixes, bg

--- a/terms.html
+++ b/terms.html
@@ -67,10 +67,12 @@
 </aside>
 
 <section id="terms" class="mb-5">
+  <object class="bg circle-top" type="image/svg+xml" data="assets/backgrounds/terms_top_circle.svg"></object>
+  <object class="bg circle-bottom d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_bottom_bg.svg"></object>
+  <object class="bg circle-right d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_circle_2_right.svg"></object>
   <div class="container d-flex flex-column flex-md-row">
     <div class="content d-flex flex-column">
       <h2>TERMS AND CONDITIONS</h2>
-
       <ol class="mt-3">
         <li>
           <h2>1. Definitions</h2>
@@ -111,6 +113,7 @@
           <span>1.18 “Personal Data”</span> means any information relating to any person, whether individual or legal that is or may be identified, directly or indirectly.
         </li>
         <li>
+          <object class="bg light-2 d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_light_2.svg"></object>
           <h2>2. Affiliate obligations</h2>
           <span>2.1 Registering as Affiliate</span> To become a member of our Affiliate Program you must accept these terms and conditions by ticking the respective box while submitting the Affiliate Application. The Affiliate Application will form an integral part of the Affiliate Agreement.
           <br>
@@ -207,6 +210,7 @@
           The terms of payment and the fixed price for a single player are determined individually for each Partner. Fraud, spam and incent traffic are forbidden. Test limit 20 FD anything over the limit without agreement will not be paid. In case of fraud, Affiliate Program stops CPA immediately and blocks Partner's balance due to this cause for an unlimited period after detection of the fraudulent activity. Unapproved traffic sources and launches will not be paid by CPA and will be transferred to RevShare. Also If more than 45-50% of players don't make repeated deposits or if 30% or more FD is the minimum deposit, the affiliate program has the right to freeze the payment to the affiliate or transfer the traffic to RevShare. Minimum CPA payment possible from 5 FD.
         </li>
         <li>
+          <object class="bg circle-7 d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_circle_7.svg"></object>
           <h2>7. Standard commission structures</h2>
           Your percentage depends on last month's FTDFTD 0 = 25% from NGRFTD 1-5 = 30% from NGRFTD 6-10 = 35% from NGRFTD 11-20 = 40% from NGRFTD 21-30 = 45% of NGRFTD 31 and more = 50% of NGR
           <br><br>
@@ -234,6 +238,7 @@
           Moreover, as mentioned above, payouts for Brands do NOT sums. E.g. if Affiliate has a revenue share 50% terms, he would gain:0 EUR for Brand 1;2,000 EUR (4000 * 50% = 2000) for Brand 2;0 EUR for Brand 3.
         </li>
         <li>
+          <object class="bg light-8 d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_light_8.svg"></object>
           <h2>8. Confidential information</h2>
           During the term of the Affiliate Agreement, you may from time to time be entrusted with confidential information relating to our business, operations, or underlying technology and/or the Affiliate Program (including, for example, the Commissions earned by you under the Affiliate Program).
           <br><br>
@@ -253,6 +258,7 @@
           <span>9.3. Commission</span> Upon termination of the Affiliate Agreement for any reason, all Commission relating to any New Customers directed to Company during the term shall not be payable to the Affiliate as from the date of termination.
         </li>
         <li>
+          <object class="bg circle-7 d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_circle_7.svg"></object>
           <h2>10. Miscellaneous</h2>
           <span>10.1 Disclaimer</span> We make no express or implied warranties or representations with respect to the Affiliate Program, about Company or the Commission payment arrangements (including, without limitation, functionality, warranties of fitness, merchantability, legality or non-infringement). In addition, we make no representation that the operation of our sites will be uninterrupted or error-free and will not be liable for the consequences if there are any. In the event of a discrepancy between the reports offered in the Affiliate Account system and the Company database, the database shall be deemed accurate.
           <br>
@@ -281,19 +287,20 @@
         <small>Dark/Light Theme</small>
         <div class="theme-toggle mt-2">
           <div class="theme-toggle_background"></div>
-          <svg class="moon ms-3" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="moon" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M7.52042 0.500027C8.0305 0.501387 8.10551 1.22445 7.68387 1.51151C6.13656 2.56495 5.12044 4.34064 5.12044 6.35366C5.12044 9.58655 7.74122 12.2073 10.9741 12.2073C11.5525 12.2073 12.1113 12.1234 12.639 11.9672C13.1282 11.8223 13.6404 12.3375 13.3182 12.7331C11.943 14.4216 9.84742 15.5 7.5 15.5C3.35786 15.5 0 12.1421 0 8C0 3.85786 3.35786 0.5 7.5 0.5C7.50681 0.5 7.51362 0.500009 7.52042 0.500027Z" fill="#478BF9"/>
           </svg>
-          <svg class="sun me-3" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="sun" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M3.89232 3.11707L2.72083 1.89104L1.80316 2.85679L2.96814 4.08282L3.89232 3.11707ZM2.09603 6.99378H0.143555V8.36364H2.09603V6.99378ZM7.95347 0.178711H6.65182V2.19926H7.95347V0.178711ZM12.8021 2.85679L11.8845 1.89104L10.7195 3.11707L11.6371 4.08282L12.8021 2.85679ZM10.713 12.2404L11.878 13.4732L12.7956 12.5075L11.6241 11.2815L10.713 12.2404ZM12.5093 6.99378V8.36364H14.4617V6.99378H12.5093ZM7.30265 3.56912C5.14841 3.56912 3.39769 5.41159 3.39769 7.67871C3.39769 9.94583 5.14841 11.7883 7.30265 11.7883C9.45688 11.7883 11.2076 9.94583 11.2076 7.67871C11.2076 5.41159 9.45688 3.56912 7.30265 3.56912ZM6.65182 15.1787H7.95347V13.1582H6.65182V15.1787ZM1.80316 12.5006L2.72083 13.4664L3.88581 12.2335L2.96814 11.2678L1.80316 12.5006Z" fill="white"/>
           </svg>
         </div>
       </div>
     </aside>
   </div>
+  <object class="bg w-100 d-md-none" type="image/svg+xml" data="assets/backgrounds/terms_mobile_bottom.svg"></object>
 </section>
 
-<footer class="thick-bordered">
+<footer id="footer" class="thick-bordered">
   <div class="container d-flex flex-column flex-md-row justify-content-between align-items-md-end">
     <div>
       <object class="mb-2" type="image/svg+xml" data="assets/icons/logo.svg"></object>
