--- a/news[id].html
+++ b/news[id].html
@@ -68,6 +68,7 @@
 </aside>
 
 <section id="news_content" class="mb-5">
+  <object class="bg circle-middle d-md-none" type="image/svg+xml" data="assets/backgrounds/single_post_middle_bg.svg"></object>
   <object class="bg light-top d-md-none" type="image/svg+xml" data="assets/backgrounds/single_post_light_top.svg"></object>
   <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/single_post_left_circle.svg"></object>
   <div class="container d-flex">
