terms remove top bg

--- a/terms.html
+++ b/terms.html
@@ -67,7 +67,7 @@
 </aside>
 
 <section id="terms" class="mb-5">
-  <object class="bg circle-top" type="image/svg+xml" data="assets/backgrounds/terms_top_circle.svg"></object>
+  <object class="bg circle-top d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_top_circle.svg"></object>
   <object class="bg circle-bottom d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_bottom_bg.svg"></object>
   <object class="bg circle-right d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/terms_circle_2_right.svg"></object>
   <div class="container d-flex flex-column flex-md-row">
