--- a/careers.html
+++ b/careers.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/pages/careers.css">
+  <link rel="stylesheet" href="lib/splide/dist/css/splide.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.min.css">
   <title>Megapartners | Careers</title>
@@ -153,7 +154,7 @@
   <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/careers_positions_circle.svg"></object>
   <div class="container">
     <h2 class="text-center mb-5">Open positions</h2>
-    <ul class="filters thick-bordered d-flex group p-3">
+    <ul class="filters thick-bordered d-none d-md-flex group p-3">
       <li>
         <button class="btn" data-filter="all">View all</button>
       </li>
@@ -161,9 +162,49 @@
         <button class="btn" data-filter="marketing">Marketing</button>
       </li>
       <li>
+        <button class="btn" data-filter="analytics">Analytics</button>
+      </li>
+      <li>
+        <button class="btn" data-filter="product">Product</button>
+      </li>
+      <li>
+        <button class="btn" data-filter="support">Support</button>
+      </li>
+      <li>
         <button class="btn" data-filter="it">IT</button>
       </li>
+      <li>
+        <button class="btn" data-filter="backoffice">Backoffice</button>
+      </li>
     </ul>
+    <div class="splide d-md-none bordered" aria-label="...">
+      <div class="shadow"></div>
+      <div class="splide__track">
+        <ul class="splide__list filters">
+          <li class="splide__slide">
+            <button class="btn" data-filter="all">View all</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="marketing">Marketing</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="analytics">Analytics</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="product">Product</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="support">Support</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="it">IT</button>
+          </li>
+          <li class="splide__slide">
+            <button class="btn" data-filter="backoffice">Backoffice</button>
+          </li>
+        </ul>
+      </div>
+    </div>
     <ul class="filtered-content mt-5 d-inline-flex flex-wrap">
       <li class="card tinted thick-bordered d-flex flex-column">
         <small class="d-block" data-marker="marketing">Marketing</small>
@@ -260,6 +301,82 @@
           </div>
         </div>
       </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="analytics">Analytics</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="support">Support</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="backoffice">Backoffice</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="product">Product</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </section>
@@ -270,7 +387,7 @@
     <h2 class="text-center">There is no suitable vacancy?</h2>
     <p class="text-center">Send us your CV and we will contact you.</p>
     <div class="container">
-      <form action="#" class="thick-bordered my-5 py-5 w-100">
+      <form class="thick-bordered my-5 py-5 w-100">
         <div class="container d-flex flex-column align-items-center">
           <div class="w-100">
             <ul class="d-flex flex-column flex-md-row group justify-content-between">
@@ -278,29 +395,39 @@
                 <div class="input">
                   <input placeholder="Your name..." type="text">
                   <span>Name:</span>
+                  <div class="error-text"></div>
                 </div>
               </li>
-              <li class="mt-3 mt-md-0">
+              <li class="mt-4 mt-md-0">
                 <div class="input">
                   <input placeholder="Your email..." type="email">
                   <span>Email:</span>
+                  <div class="error-text"></div>
                 </div>
               </li>
             </ul>
-            <div class="input textarea mt-3">
+            <div class="input textarea mt-4">
               <textarea rows="4" placeholder="Tell us a little about yourself..." type="text" ></textarea>
               <span>About yourself:</span>
+              <div class="error-text"></div>
             </div>
-            <ul class="d-flex flex-column flex-md-row group justify-content-between mt-3">
+            <ul class="d-flex flex-column flex-md-row group justify-content-between mt-4">
               <li>
                 <div class="input">
-                  <input placeholder="Select file" type="text">
-                  <span>Name:</span>
+                  <input id="file" type="file">
+                  <label for="file" class="select-file d-flex align-items-center">
+                    <svg class="me-2" width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14.9524 4.61194C14.3058 4.05176 13.471 3.75725 12.6161 3.78767C11.7612 3.8181 10.9495 4.17121 10.3444 4.77594L3.55835 11.5599C3.42103 11.7073 3.25543 11.8255 3.07143 11.9075C2.88743 11.9895 2.6888 12.0336 2.4874 12.0371C2.28599 12.0407 2.08594 12.0036 1.89916 11.9282C1.71238 11.8527 1.54271 11.7405 1.40028 11.598C1.25784 11.4556 1.14555 11.2859 1.07011 11.0991C0.994666 10.9124 0.957617 10.7123 0.961171 10.5109C0.964725 10.3095 1.00881 10.1109 1.09079 9.92686C1.17278 9.74287 1.29098 9.57726 1.43835 9.43994L8.22235 2.65594C8.81839 2.05189 9.52888 1.57273 10.3123 1.24648C11.0957 0.920238 11.9363 0.753455 12.7849 0.755886C13.6335 0.758316 14.4731 0.929912 15.2546 1.26064C16.0361 1.59137 16.7438 2.07459 17.3364 2.68205C17.929 3.28951 18.3945 4.00901 18.7057 4.79849C19.017 5.58797 19.1677 6.43158 19.149 7.27999C19.1304 8.12839 18.9428 8.96458 18.5972 9.73963C18.2517 10.5147 17.755 11.2131 17.1364 11.7939L7.69035 20.7859C6.96021 21.4983 5.97699 21.8915 4.95698 21.8789C3.93697 21.8663 2.96373 21.4491 2.25135 20.7189C1.53898 19.9888 1.14584 19.0056 1.1584 17.9856C1.17097 16.9656 1.58821 15.9923 2.31835 15.2799L10.8044 6.79194C10.9428 6.64874 11.1084 6.53455 11.2914 6.45602C11.4744 6.3775 11.6713 6.33621 11.8705 6.33457C12.0696 6.33294 12.2671 6.37098 12.4514 6.44649C12.6358 6.522 12.8032 6.63346 12.9439 6.77436C13.0847 6.91527 13.196 7.0828 13.2714 7.26718C13.3467 7.45156 13.3845 7.64909 13.3827 7.84826C13.3809 8.04743 13.3394 8.24424 13.2607 8.42721C13.182 8.61017 13.0677 8.77564 12.9244 8.91394L4.44435 17.4019C4.29599 17.5609 4.21456 17.771 4.21696 17.9884C4.21936 18.2059 4.30541 18.4141 4.45724 18.5697C4.60907 18.7254 4.81502 18.8167 5.03235 18.8245C5.24967 18.8324 5.46168 18.7563 5.62435 18.6119L15.0684 9.61994C15.41 9.29476 15.68 8.90174 15.8608 8.4661C16.0417 8.03047 16.1294 7.56183 16.1185 7.09027C16.1076 6.61871 15.9982 6.15465 15.7974 5.72785C15.5966 5.30105 15.3087 4.92095 14.9524 4.61194Z" fill="white" fill-opacity="0.2"/>
+                    </svg>
+                    Select file
+                  </label>
+                  <span>Attach CV:</span>
+                  <div class="error-text"></div>
                 </div>
               </li>
-              <li class="mt-3 mt-md-0">
+              <li class="mt-4 mt-md-0">
                 <div class="input">
-                  <button class="cta-btn w-100">Send CV</button>
+                  <button class="cta-btn send-cv-btn w-100">Send CV</button>
                 </div>
               </li>
             </ul>
@@ -349,6 +476,7 @@
   </div>
 </footer>
 
+<script src="lib/splide/dist/js/splide.min.js"></script>
 <script src="index.js"></script>
 <script src="lib/Filter.js"></script>
 <script src="js/careers.js"></script>
