--- a/careers.html
+++ b/careers.html
@@ -379,15 +379,17 @@
       </li>
     </ul>
   </div>
+  <object class="bg pattern d-md-none" type="image/svg+xml" data="assets/backgrounds/careers_positions_bottom_pattern.svg"></object>
 </section>
 
 <section id="cv">
-  <object class="bg light" type="image/svg+xml" data="assets/backgrounds/commissions_cv_light.svg"></object>
+  <object class="bg light d-md-none" type="image/svg+xml" data="assets/backgrounds/commissions_cv_light.svg"></object>
+  <object class="bg light d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/commissions_cv_light.svg"></object>
   <div class="container">
     <h2 class="text-center">There is no suitable vacancy?</h2>
     <p class="text-center">Send us your CV and we will contact you.</p>
     <div class="container">
-      <form class="thick-bordered my-5 py-5 w-100">
+      <form class="thick-bordered mt-5 mb-md-5 py-5 w-100">
         <div class="container d-flex flex-column align-items-center">
           <div class="w-100">
             <ul class="d-flex flex-column flex-md-row group justify-content-between">
@@ -436,6 +438,7 @@
       </form>
     </div>
   </div>
+  <object class="bg pattern d-md-none w-100" type="image/svg+xml" data="assets/backgrounds/careers_cv_bottom_pattern.svg"></object>
 </section>
 
 <footer class="thick-bordered">
