--- a/careers.html
+++ b/careers.html
@@ -438,7 +438,7 @@
       </form>
     </div>
   </div>
-  <object class="bg pattern d-md-none w-100" type="image/svg+xml" data="assets/backgrounds/careers_cv_bottom_pattern.svg"></object>
+  <object class="bg pattern-mobile d-md-none w-100" type="image/svg+xml" data="assets/backgrounds/careers_cv_bottom_pattern.svg"></object>
 </section>
 
 <footer class="thick-bordered">
